Handle icons separately

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "nimiq-style.min.css"
   ],
   "scripts": {
-    "build": "cleancss -o nimiq-style.min.css src/main.css"
+    "build": "cleancss -o nimiq-style.min.css src/main.css && cleancss -o nimiq-style-icons.min.css src/icons.css"
   },
   "devDependencies": {
     "clean-css-cli": "^4.2.1"
