Include icon SVG files into NPM package
To be able to use them in the Vue Icon component in @nimiq/vue-components.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "files": [
     "nimiq-style.min.css",
-    "nimiq-style.icons.svg"
+    "nimiq-style.icons.svg",
+    "src/icons"
   ],
   "scripts": {
     "build:css": "cleancss -o nimiq-style.min.css src/main.css",
